Dvops_Demo/azure-devops-cicd-demo/infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-devops-cicd-demo-service
  labels:
    app: azure-devops-cicd-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: azure-devops-cicd-demo
